# postgres-effectful

./: .gitignore  CNAME  LICENSE  flake.nix  hasql-effectful.cabal  hie.yaml  postgres-effectful.cabal
.github/workflows/: ci.yml  test.yml
hasql-effectful/: Effectful-Hasql.html  doc-index.html  doc-index.json  hasql-effectful.haddock  hasql-effectful.txt  index.html
hasql-effectful/src/: Effectful.Hasql.html
hasql-pool-effectful/: Effectful-Hasql-Pool.html  doc-index.html  doc-index.json  hasql-effectful.haddock  hasql-effectful.txt  index.html
hasql-pool-effectful/src/: Effectful.Hasql.Pool.html
nix/: test.nix
pool-src/Effectful/Hasql/: Pool.hs
src/Effectful/: Hasql.hs  Postgres.hs
src/Effectful/Hasql/: Effect.hs
src/Effectful/Hasql/Session/: Effect.hs
src/Effectful/Postgres/Static/: Connection.hs  Pool.hs
test/: HasqlPoolTest.hs  HasqlTest.hs  Main.hs  PostgresStaticConnectionTest.hs  PostgresStaticPoolTest.hs
